// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Greetings matches the snapshot when empty user object passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="App padding10"
      >
        <div
          class="signin-container"
        >
          <div
            class="login-header"
          >
            Employee Polls
          </div>
          <select
            class="login-padding10"
            data-testid="select-user"
          >
            <option
              disabled=""
              value="none"
            >
              Select user...
            </option>
          </select>
          <div />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="App padding10"
    >
      <div
        class="signin-container"
      >
        <div
          class="login-header"
        >
          Employee Polls
        </div>
        <select
          class="login-padding10"
          data-testid="select-user"
        >
          <option
            disabled=""
            value="none"
          >
            Select user...
          </option>
        </select>
        <div />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Greetings matches the snapshot when user object passed 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="App padding10"
      >
        <div
          class="signin-container"
        >
          <div
            class="login-header"
          >
            Employee Polls
          </div>
          <select
            class="login-padding10"
            data-testid="select-user"
          >
            <option
              disabled=""
              value="none"
            >
              Select user...
            </option>
            <option
              value="sarahedo"
            >
              Sarah Edo
            </option>
            <option
              value="tylermcginnis"
            >
              Tyler McGinnis
            </option>
          </select>
          <div />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="App padding10"
    >
      <div
        class="signin-container"
      >
        <div
          class="login-header"
        >
          Employee Polls
        </div>
        <select
          class="login-padding10"
          data-testid="select-user"
        >
          <option
            disabled=""
            value="none"
          >
            Select user...
          </option>
          <option
            value="sarahedo"
          >
            Sarah Edo
          </option>
          <option
            value="tylermcginnis"
          >
            Tyler McGinnis
          </option>
        </select>
        <div />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
